fix(home/ProductCarousel): fix the carousel, hide scrollbar
feat(home/ProductCarousel): add carousel button

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,10 @@
     margin-inline: auto;
   }
 }
+
+@utility scrollbar-none {
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
